--- a/notebooks/011-test-original-dataset.ipynb
+++ b/notebooks/011-test-original-dataset.ipynb
@@ -9,7 +9,9 @@
     "# from src.config import Config\n",
     "# import matplotlib.pyplot as plt\n",
     "# import os\n",
-    "# from src import helper"
+    "# import pandas as pd\n",
+    "# from src import helper\n",
+    "# import seaborn as sns"
    ]
   },
   {
@@ -28,10 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_dataset = \"original\"\n",
-    "# test_dataset = \"original\"\n",
-    "# training_type = \"top\"\n",
-    "# output_network_type = \"current\""
+    "# training_type = 'top'\n",
+    "# output_network_type = 'current'\n",
+    "# train_dataset = 'original'\n",
+    "# test_dataset = 'original'\n",
+    "# file_name = 'evaluate_result.csv'"
    ]
   },
   {
@@ -40,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# original_test_datapath = os.path.join(Config.processed_data_path, str(test_dataset) + \"_valid\")"
+    "# data_path = os.path.join(Config.report_path, 'evaluate', output_network_type, train_dataset, test_dataset)"
    ]
   },
   {
@@ -49,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export_path = os.path.join(Config.report_path, \"evaluate\", output_network_type, train_dataset, test_dataset)"
+    "# df = pd.read_csv(os.path.join(data_path, file_name))"
    ]
   },
   {
@@ -58,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model, _ = helper.get_trained_model(training_type=training_type, dataset=train_dataset, output_network_type=output_network_type)"
+    "# df.error.describe()"
    ]
   },
   {
@@ -67,7 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# result = helper.predict_bmi(model=model, test_data_path=original_test_datapath, export_path=export_path)"
+    "# df = df.drop(labels=['path'], axis=1)\n",
+    "# df.head()"
    ]
   },
   {
@@ -76,8 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# samples = result.sample(n=8)\n",
-    "# samples.to_csv(path_or_buf=os.path.join(export_path, \"vip_samples.csv\"),index=False)"
+    "# _ = sns.displot(df, x='error', kind='kde', fill=True)"
    ]
   },
   {
@@ -86,7 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# helper.plot_batch_images(dataframe=samples, starting_idx=0, columns=['bmi', 'predicted', 'error'], export_path=export_path, name='vip_sample_result', fig_width=17)"
+    "# target = pd.Series(['Ground Truth' for _ in range(df.shape[0])], name='Target')\n",
+    "# gt_df = pd.concat([df['bmi'], target], axis=1)"
    ]
   },
   {
@@ -95,7 +99,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# helper.plot_batch_images(dataframe=result.head(n=8), starting_idx=0, columns=['bmi', 'predicted', 'error'], export_path=export_path, name='vip_8_best_result', fig_width=17)"
+    "# target = pd.Series(['Predicted' for _ in range(df.shape[0])], name='Target')\n",
+    "# pd_df = pd.concat([df['predicted'], target], axis=1)\n",
+    "# pd_df.columns = ['bmi', 'Target']"
    ]
   },
   {
@@ -104,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# helper.plot_batch_images(dataframe=result.tail(n=8), starting_idx=0, columns=['bmi', 'predicted', 'error'], export_path=export_path, name='vip_8_worst_result', fig_width=17)"
+    "# pd_gt_df = pd.concat([pd_df, gt_df])"
    ]
   },
   {
@@ -113,8 +119,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# m_result = result[result.image_name.str.contains(\"^m\")]\n",
-    "# print(m_result.describe().to_latex())"
+    "# sns.displot(pd_gt_df, x=\"bmi\", hue=\"Target\", kind=\"kde\", fill=True,  height=5, aspect=10/5)\n",
+    "# plt.xlabel('BMI', size=14)\n",
+    "# plt.ylabel('Frequency', size=14)\n",
+    "# plt.savefig(os.path.join(Config.report_path, 'evaluate', 'current', 'original','original', 'vip_predicted_vs_groundtruth_dis.png'), transparent=True)"
    ]
   },
   {
@@ -123,8 +131,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# f_result = result[result.image_name.str.contains(\"^f\")]\n",
-    "# print(f_result.describe().to_latex())"
+    "# uw_df, h_df, ow_df, ob_df = helper.split_bmi_class_df(df, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = pd.DataFrame()\n",
+    "# for cdf in [uw_df, h_df, ow_df, ob_df]:\n",
+    "#     this_df = pd.DataFrame(cdf.error.describe()).T\n",
+    "#     print(cdf.error.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# m_df = df[df.image_name.str.contains(\"^m\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# f_df = df[df.image_name.str.contains(\"^f\")]"
    ]
   },
   {
